# rs_manifest_worker

./: .env.dist  .gitignore  .gitlab-ci-dist.yml  .gitlab-ci.yml  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md
.github/: dependabot.yml
examples/: dash.json  ism.json
src/: main.rs  manifest.rs  message.rs  utils.rs
src/dash/: manifest.rs  message.rs  mod.rs
src/ism/: manifest.rs  message.rs
tests/: sample.ism  sample_1.mpd  sample_1_for_http.mpd  sample_1_for_replacement.mpd  sample_1_for_validation.mpd  sample_2.mpd  sample_3.mpd
