[package]
name = "dash_manifest_worker"
version = "0.4.2"
authors = [
  "Marc-Antoine Arnaud <arnaud.marcantoine@gmail.com>",
  "Valentin Noel <valentin.noel@media-io.com>"
]
edition = "2018"

[dependencies]
log = "0.4"
mcai_worker_sdk = "0.11.8"
schemars = "0.8.0"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
xml-rs = "0.8.0"
yaserde = "0.7"
yaserde_derive = "0.4"

[build-dependencies]
built = "0.4"
